Some fixes of overlay regarding overflowing screen and locale max-width

--- a/public/external/overlay.css
+++ b/public/external/overlay.css
@@ -14,4 +14,5 @@
 
 	overflow-x: hidden;
 	overflow-y: auto;
+	max-height: 90vh;
 }
